--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^12.1.7-canary.41",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-facebook-pixel": "^1.0.4",
     "react-icons": "^4.4.0",
     "react-redux": "^7.2.6",
     "react-slick": "^0.29.0",
